[package]
name = "prisma-rs"
version = "1.1.1"
edition = "2024"
authors = ["SirCesarium"]
description = "A lightweight L4 protocol multiplexer with zero-copy routing."
license = "MIT"
repository = "https://github.com/sircesarium/prisma-rs"
homepage = "https://github.com/sircesarium/prisma-rs"
documentation = "https://docs.rs/prisma-rs"
readme = "README.md"

[dependencies]
anyhow = { version = "1", optional = true }
bytes = "1"
clap = { version = "4.5", features = ["derive"], optional = true }
futures-util = "0.3"
memchr = "2.8"
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
tracing = "0.1"

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "prisma"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
